--- a/VoiceAssistent/env.properties
+++ b/VoiceAssistent/env.properties
@@ -1,7 +1,7 @@
-DRIVER= com.mysql.cj.jdbc.Driver
-URL= jdbc:mysql://localhost:3306/application
-DATABASE= application
-USER= root
+DRIVER= 
+URL= 
+DATABASE=
+USER= 
 PASSWORD=
 
 
